--- a/css/.css
+++ b/css/.css
@@ -3,7 +3,7 @@ section {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: url(Wall of gains light mode background.jpg);
+    background: url('Wall of gains light mode background.jpg');
     background-size: cover;
     background-position: center;
     background-attachment:fixed;
