--- a/css/.css
+++ b/css/.css
@@ -1,9 +1,9 @@
 section {
-    display:flex
+    display:flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: url('Wall of gains light mode background.jpg');
+    background: url('images/Wall-of-gains-light-mode.jpg');
     background-size: cover;
     background-position: center;
     background-attachment:fixed;
