--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ section {
     align-items: center;
     min-height: 100vh;
     background-image: url("/css/images/Wall-of-gains-light-mode-background.png");
-    background-size: 100%;
+    background-size: cover;
     background-position: center;
     background-attachment: fixed;
     padding: 50px;
@@ -15,7 +15,28 @@ section {
     width: calc(100% - 100px);
     min-height: calc(100vh - 280px);
     min-height: 300px;
-    background: grey;
-    box-shadow: 0 15px 35px rgba(grey);
+    background: linear-gradient(180deg, rgba(0,215,255,1) 0%, rgba(0,61,255,0.9668242296918768) 100%, rgba(173,169,169,1) 100%);
+    box-shadow: 0 15px 35px rgba(0,0,0,0.05);
     border-radius: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 50px;
+    border-style: solid;
+    border-color: white;
+}
+
+header {
+    position: absolute;
+    top: -40px;
+    right: 20px;
+    left: 20px;
+    padding: 20px 50px;
+    justify-content: space-between;
+    align-items: center;
+    background: linear-gradient(180deg, rgba(0,215,255,1) 0%, rgba(0,61,255,0.9668242296918768) 100%, rgba(173,169,169,1) 100%);
+    border-style: solid;
+    border-color: white;
+    border-radius: 20px;
+    box-shadow: 0 15px 35px rgba(0,0,0,0.05);
 }
