--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+html {
+    font-family: "Avenir Next", "Avenir", sans-serif;
+}
+
+
 section {
     display: flex;
     justify-content: center;
@@ -16,14 +21,14 @@ section {
     min-height: calc(100vh - 280px);
     min-height: 300px;
     background: linear-gradient(180deg, rgba(0,215,255,1) 0%, rgba(0,61,255,0.9668242296918768) 100%, rgba(173,169,169,1) 100%);
-    box-shadow: 0 15px 35px rgba(0,0,0,0.05);
+    box-shadow: 0 35px 35px rgb(0 0 0);
+    border: 1px;
     border-radius: 20px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 50px;
-    border-style: solid;
-    border-color: white;
+   
 }
 
 header {
@@ -35,8 +40,22 @@ header {
     justify-content: space-between;
     align-items: center;
     background: linear-gradient(180deg, rgba(0,215,255,1) 0%, rgba(0,61,255,0.9668242296918768) 100%, rgba(173,169,169,1) 100%);
-    border-style: solid;
-    border-color: white;
+    border: 1px;
     border-radius: 20px;
-    box-shadow: 0 15px 35px rgba(0,0,0,0.05);
+    box-shadow: 0 35px 35px rgb(0 0 0 / 50%);
+    backdrop-filter: blur(10px);
+}
+
+header ul {
+    display:flex;
+}
+
+header ul li {
+    list-style-type: none;
+    margin; 0px 10px;
+}
+
+header ul li a {
+    /* js reactive buttons*/
+    text-decoration: none;
 }
