--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 html {
     font-family: "Avenir Next", "Avenir", sans-serif;
+    color: white;
 }
 
 
@@ -76,6 +77,10 @@ audio::-webkit-media-controls-panel {
 
 header ul {
     display: flex;
+    margin-inline-start: 45px;
+    margin-left: 0px;
+    padding-left: 0px;
+    margin-top: 50px;
 }
 
 header ul li {
@@ -84,7 +89,7 @@ header ul li {
 }
 
 header ul li a {
-    /* js reactive buttons*/
+    /* js reactive buttons check*/
     text-decoration: none;
     font-weight: 500;
     color: whitesmoke;
@@ -98,3 +103,208 @@ header ul li a:hover.active {
     box-shadow: 0 5px 10px rgba(0,0,0,0.1);
     color: #56AEFF;
 }
+
+.intro-content-box {
+    transform: translateX(-85px);
+    max-width: 850px;
+    box-shadow: 0 15px 30px rgb(0 0 0 / 10%);
+    border-radius: 20px;
+    backdrop-filter: blur(10px);
+    border: 1px;
+    background: linear-gradient(180deg, rgba(0,215,255,1) 0%, rgba(0,61,255,0.9668242296918768) 100%, rgba(173,169,169,1) 100%);
+    margin-left: 0px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+.intro-content-box h2 {
+    font-size: 2em;
+    color:white;
+}
+
+.intro-content-box p {
+    font-size: 1.2em;
+    border-radius: 30px;
+}
+
+.logo-div{
+    width: 100%;
+    position: relative;
+    margin: -85px;
+    transform: translateX(80px);
+}
+
+.logo {
+    max-width: 335px;
+    border-radius: 20px;
+}
+
+.headings-box {
+    display: inline-block;
+    color: white;
+    z-index: 1;
+    transform: translate(-25px, -225px);
+    position: absolute;
+}
+
+.card {
+    position: relative;
+    width:300px;
+    height:400px;
+    transform-style: preserve-3d;
+    transform: perspective(1000px);
+    box-shadow: 10px 20px 40px rgba(0,0,0,0.25);
+    border-radius: 20px;
+}
+
+.imgbox {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+}
+
+.imgbox img {
+    position:absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.card .details {
+    position:absolute;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100px;
+    padding: 20px;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.card .details .content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.card .details .content h3 {
+    font-weight 700;
+    text-align: center;
+    line-height: 1em;
+}
+
+.card .details .content h3 span{
+    font-size: 0.8em;
+}
+
+.card .details .content .social-icons {
+    position: relative;
+    display: flex;
+    margin-top: 10px;
+}
+
+.card .details .content .social-icons a {
+   display: inline-block;
+   width: 35px;
+   height: 35px;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   text-decoration: none;
+   margin: 5px;
+   font-size: 18px;
+   transition: 0.2s;;
+}
+
+.card .details .content .social-icons a:hover {
+    background: white;
+}
+
+/* */
+.founders-container {
+    position: relative;
+    width: calc(100% - 100px);
+    min-height: calc(100vh - 280px);
+    min-height: 300px;
+    background: linear-gradient(180deg, rgba(0,215,255,1) 0%, rgba(0,61,255,0.9668242296918768) 100%, rgba(173,169,169,1) 100%);
+    box-shadow: 0 35px 35px rgb(0 0 0);
+    border: 1px;
+    border-radius: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 50px;
+}
+
+i {
+    position: relative;
+    left: 0px;
+    font-size: 2em;
+  }
+  
+  .founders-title {
+     text-align: center;
+    }
+  
+  .founders-section-area {
+    display: inline-block;
+    width: -webkit-fill-available;
+  }
+  
+  .founders-title {
+    display: inline;
+    width: 100%;
+    position: relative;
+    top: 10px;
+    bottom: 10px;
+  }
+  
+  
+  .t-logo-bottom {
+    position: relative;
+    bottom: 10px;
+    display: inline-block;
+  }
+  
+  .template-spacing {
+    display: flex;
+    max-width: 100%;
+    min-height: 90vh;
+    margin: 0 auto;
+    padding: 30px;
+    gap: 40px;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: center;
+    justify-content: center;
+    margin-right: 0px;
+    padding-left: 0px;
+    padding-right: 0px;
+    align-self: center;;
+  }
+  
+  .founders-template {
+    width: 300px;
+      border: 6px;
+      border-color: white;
+      border-style: dashed;
+      border-radius: 95px;
+      display: inline;
+      margin: 5px;
+  }
+  
+  .founders-centering {
+    margin:0;
+    margin-top: 20px;
+  }
+  
+  .founders-pfp {
+    width: 250px;
+    position: relative;
+    padding: 10px;
+  }
