--- a/css/style.css
+++ b/css/style.css
@@ -155,14 +155,43 @@ header ul li a:hover.active {
     transform: perspective(1000px);
     box-shadow: 10px 20px 40px rgba(0,0,0,0.25);
     border-radius: 20px;
+    transition: 1s;
 }
 
-.imgbox {
+.card:hover {
+    transform: translateX(50%);
+}
+
+.card .imgbox {
     position: relative;
     width: 100%;
     height: 100%;
     z-index: 1;
+    transform-origin: left;
+    transform-style: preserve-3d;
+    background: black;
+    transition: 1s;
 }
+
+.card:hover .imgbox {
+    transform: rotateY(-188 deggle);
+}
+
+.card .imgbox img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transform-style: preserve-3d;
+    backface-visibility: hidden;
+}
+
+.card .imgbox img;:nth-child(2) {
+    transform: rotateY(180deg);
+    box-shadow: 10px 20px 40px rgba(0,0,0,0.25);
+} 
 
 .imgbox img {
     position:absolute;
@@ -171,6 +200,8 @@ header ul li a:hover.active {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    border-radius: 20px;
+    transform-style: preserve-3d;
 }
 
 .card .details {
