--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,6 @@ section {
     justify-content: space-between;
     align-items: center;
     padding: 50px;
-   
 }
 
 header {
@@ -117,7 +116,7 @@ header ul li a:hover.active {
     padding-right: 20px;
 }
 
-.intro-content-box h2 {
+.intro-content-box h3 {
     font-size: 2em;
     color:white;
 }
@@ -147,15 +146,39 @@ header ul li a:hover.active {
     position: absolute;
 }
 
+.team-container {
+    position: absolute;
+    width: calc(100% - 100px);
+    min-height: calc(100vh - 280px);
+    min-height: 300px;
+    background: linear-gradient(180deg, rgba(0,215,255,1) 0%, rgba(0,61,255,0.9668242296918768) 100%, rgba(173,169,169,1) 100%);
+    box-shadow: 0 35px 35px rgb(0 0 0);
+    border: 1px;
+    border-radius: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 50px;
+}
 .card {
     position: relative;
     width:300px;
     height:400px;
+    background: linear-gradient(180deg, rgba(224,251,252,1) 0%, rgba(152,193,217,1) 50%, rgba(61,90,128,1) 100%);
     transform-style: preserve-3d;
     transform: perspective(1000px);
     box-shadow: 10px 20px 40px rgba(0,0,0,0.25);
     border-radius: 20px;
     transition: 1s;
+}
+
+.imgbox {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    transform-origin: left;
+    transform-style: preserve-3d;
 }
 
 .card:hover {
@@ -169,12 +192,13 @@ header ul li a:hover.active {
     z-index: 1;
     transform-origin: left;
     transform-style: preserve-3d;
+    border-radius: 20px;
     background: black;
     transition: 1s;
 }
 
 .card:hover .imgbox {
-    transform: rotateY(-188 deggle);
+    transform: rotateY(-188deg);
 }
 
 .card .imgbox img {
@@ -188,7 +212,7 @@ header ul li a:hover.active {
     backface-visibility: hidden;
 }
 
-.card .imgbox img;:nth-child(2) {
+.card .imgbox img:nth-child(2) {
     transform: rotateY(180deg);
     box-shadow: 10px 20px 40px rgba(0,0,0,0.25);
 } 
@@ -205,15 +229,16 @@ header ul li a:hover.active {
 }
 
 .card .details {
-    position:absolute;
-    top:0;
+    position: absolute;
+    top: 0;
     left: 0;
     width: 100%;
-    height: 100px;
+    height: 100%;
     padding: 20px;
-    display:flex;
+    display: flex;
     justify-content: center;
     align-items: center;
+    margin-left: -20px;
 }
 
 .card .details .content {
@@ -224,7 +249,7 @@ header ul li a:hover.active {
 }
 
 .card .details .content h3 {
-    font-weight 700;
+    font-weight: 700;
     text-align: center;
     line-height: 1em;
 }
@@ -236,7 +261,8 @@ header ul li a:hover.active {
 .card .details .content .social-icons {
     position: relative;
     display: flex;
-    margin-top: 10px;
+    margin-top: 0px;
+    border-radius: 20px;
 }
 
 .card .details .content .social-icons a {
@@ -250,6 +276,11 @@ header ul li a:hover.active {
    margin: 5px;
    font-size: 18px;
    transition: 0.2s;;
+}
+
+.t-logo-bottom {
+    color: white;
+    background: blue;
 }
 
 .card .details .content .social-icons a:hover {
