--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,11 @@
 html {
     font-family: "Avenir Next", "Avenir", sans-serif;
     color: white;
+    background-image: url("/css/images/Wall-of-gains-light-mode-background.png");
+    background-size: cover;
+    background-repeat: repeat-y;
+    background-position: center;
+    background-attachment: fixed;
 }
 
 
@@ -9,10 +14,6 @@ section {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background-image: url("/css/images/Wall-of-gains-light-mode-background.png");
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
     padding: 50px;
 }
 
@@ -139,11 +140,22 @@ header ul li a:hover.active {
 }
 
 .headings-box {
-    display: inline-block;
+    display: block;
     color: white;
     z-index: 1;
-    transform: translate(-25px, -225px);
+    transform: translate(-25px, -45px);
     position: absolute;
+    top: -40px;
+    right: 20px;
+    left: 20px;
+    padding: 20px 50px;
+    justify-content: space-between;
+    align-items: center;
+    background: linear-gradient(180deg, rgba(0,215,255,1) 0%, rgba(0,61,255,0.9668242296918768) 100%, rgba(173,169,169,1) 100%);
+    border: 1px;
+    border-radius: 20px;
+    box-shadow: 0 35px 35px rgb(0 0 0 / 50%);
+    backdrop-filter: blur(10px);
 }
 
 .team-container {
@@ -155,21 +167,26 @@ header ul li a:hover.active {
     box-shadow: 0 35px 35px rgb(0 0 0);
     border: 1px;
     border-radius: 20px;
-    display: flex;
-    justify-content: space-between;
+    display: inline-flex;
+    justify-content: space-around;
     align-items: center;
     padding: 50px;
+    flex-wrap: wrap;
+    text-align: center;
 }
 .card {
     position: relative;
-    width:300px;
-    height:400px;
+    width: 300px;
+    height: 400px;
     background: linear-gradient(180deg, rgba(224,251,252,1) 0%, rgba(152,193,217,1) 50%, rgba(61,90,128,1) 100%);
     transform-style: preserve-3d;
     transform: perspective(1000px);
-    box-shadow: 10px 20px 40px rgba(0,0,0,0.25);
+    box-shadow: 10px 20px 40px rgb(0 0 0 / 25%);
     border-radius: 20px;
     transition: 1s;
+    display: inline-flex;
+    align-items: center;
+    margin-left: 80px;
 }
 
 .imgbox {
@@ -195,6 +212,7 @@ header ul li a:hover.active {
     border-radius: 20px;
     background: black;
     transition: 1s;
+    z-index: 2;
 }
 
 .card:hover .imgbox {
@@ -287,86 +305,29 @@ header ul li a:hover.active {
     background: white;
 }
 
-/* */
-.founders-container {
-    position: relative;
-    width: calc(100% - 100px);
-    min-height: calc(100vh - 280px);
-    min-height: 300px;
+/* callers */
+
+.profit-container {
+    display: inline-block;
+    bottom: -2000px;
+    position: absolute;
     background: linear-gradient(180deg, rgba(0,215,255,1) 0%, rgba(0,61,255,0.9668242296918768) 100%, rgba(173,169,169,1) 100%);
+    min-height: 300px;
     box-shadow: 0 35px 35px rgb(0 0 0);
     border: 1px;
     border-radius: 20px;
-    display: flex;
-    justify-content: space-between;
     align-items: center;
     padding: 50px;
 }
+}
 
-i {
-    position: relative;
-    left: 0px;
-    font-size: 2em;
-  }
-  
-  .founders-title {
-     text-align: center;
-    }
-  
-  .founders-section-area {
-    display: inline-block;
-    width: -webkit-fill-available;
-  }
-  
-  .founders-title {
-    display: inline;
-    width: 100%;
-    position: relative;
-    top: 10px;
-    bottom: 10px;
-  }
-  
-  
-  .t-logo-bottom {
-    position: relative;
-    bottom: 10px;
-    display: inline-block;
-  }
-  
-  .template-spacing {
-    display: flex;
-    max-width: 100%;
-    min-height: 90vh;
-    margin: 0 auto;
-    padding: 30px;
-    gap: 40px;
+.callers-cards {
+    display: inline-flex;
+    justify-content: space-around;
     flex-direction: row;
-    flex-wrap: wrap;
-    align-content: center;
-    justify-content: center;
-    margin-right: 0px;
-    padding-left: 0px;
-    padding-right: 0px;
-    align-self: center;;
-  }
-  
-  .founders-template {
-    width: 300px;
-      border: 6px;
-      border-color: white;
-      border-style: dashed;
-      border-radius: 95px;
-      display: inline;
-      margin: 5px;
-  }
-  
-  .founders-centering {
-    margin:0;
-    margin-top: 20px;
-  }
-  
-  .founders-pfp {
-    width: 250px;
-    position: relative;
-    padding: 10px;
-  }
+    justify-content: space-around;
+    align-items: center;
+}
+
+
+/* */
