profits pics next

--- a/css/style.css
+++ b/css/style.css
@@ -319,7 +319,6 @@ header ul li a:hover.active {
     align-items: center;
     padding: 50px;
 }
-}
 
 .callers-cards {
     display: inline-flex;
@@ -329,5 +328,204 @@ header ul li a:hover.active {
     align-items: center;
 }
 
-
 /* */
+.headings-box {
+    transform: translateX(25px);
+}
+
+.caller-content-box {
+    box-shadow: 0 15px 30px rgb(0 0 0 / 10%);
+    border-radius: 20px;
+    backdrop-filter: blur(10px);
+    border: 1px;
+    background: linear-gradient(180deg, rgba(0,215,255,1) 0%, rgba(0,61,255,0.9668242296918768) 100%, rgba(173,169,169,1) 100%);
+    margin-left: 0px;
+    padding-left: 20px;
+    padding-right: 20px;
+    width: calc(100% - 100px);
+    height: 100px;
+    text-align: center;
+    position: relative;
+    padding-top: 20px;
+    transform: translateX(25px);
+}
+
+.profit-container{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: 40px 0;
+}
+
+.profit-container .caller-box {
+    position: relative;
+    width: 320px;
+    height: 400px;
+    display: flex;
+    align-items: center;
+    margin: 40px 65px;
+    transition: 0.5s;
+}
+
+.profit-container .caller-box::before {
+    position: absolute;
+    content: '';
+    top: 0;
+    left: 50px;
+    width: 50%;
+    height: 100%;
+    background: linear-gradient(180deg, rgba(224,251,252,1) 0%, rgba(152,193,217,1) 50%, rgba(61,90,128,1) 100%);
+    border-radius: 8px;
+    transform: skewX(15deg);
+    transition: 0.5s;
+}
+
+.profit-container .caller-box:after {
+    position: absolute;
+    content: '';
+    top: 0;
+    left: 50px;
+    width: 50%;
+    height: 100%;
+    background: linear-gradient(180deg, rgba(224,251,252,1) 0%, rgba(152,193,217,1) 50%, rgba(61,90,128,1) 100%);
+    border-radius: 8px;
+    transform: skewX(15deg);
+    transition: 0.5s;
+    filter: blur(30px);
+    transition: 0.5s;
+}
+
+.profit-container .caller-box:hover:before, 
+.profit-container .caller-box:hover:after {
+transform: skewX(0deg);
+left: 20px;
+width: calc(100%-90px);
+}
+
+.profit-container .caller-box:nth-child(1):before, 
+.profit-container .caller-box:nth-child(1):after {
+    background: linear-gradient(180deg, rgba(224,251,252,1) 0%, rgba(152,193,217,1) 50%, rgba(61,90,128,1) 100%);
+}
+.profit-container .caller-box:nth-child(2):before, 
+.profit-container .caller-box:nth-child(2):after {
+    background: linear-gradient(180deg, rgba(224,251,252,1) 0%, rgba(152,193,217,1) 50%, rgba(61,90,128,1) 100%);
+}
+
+.profit-container .caller-box:nth-child(3):before, 
+.profit-container .caller-box:nth-child(3):after {
+    background: linear-gradient(180deg, rgba(224,251,252,1) 0%, rgba(152,193,217,1) 50%, rgba(61,90,128,1) 100%);
+}
+
+.caller-box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.profit-container .caller-box span {
+    display:block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom:0;
+    z-index: 50;
+    pointer-events: none;
+}
+
+.profit-container .caller-box span::before {
+    content:'';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: radius 8px;
+    background: rgba(255,255,255,0.1);
+    backdrop-filter: blur(10px);
+    opacity: 0;
+    transition: 0.5s;
+    animation: animate 2s ease-in-out linear infinite;
+    box-shadow: 0 5px 15px rgba(0,0,0,0.05);
+}
+
+.profit-container .caller-box:hover span::before {
+    top: -50px;
+    left: 50px;
+    width: 100px;
+    height: 100px;
+    opacity: 1;
+}
+
+.profit-container .caller-box span::after {
+    content:'';
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    border: radius 8px;
+    background: rgba(255,255,255,0.1);
+    backdrop-filter: blur(10px);
+    opacity: 0;
+    transition: 0.5s;
+    animation: animate 2s ease-in-out linear infinite;
+    box-shadow: 0 5px 15px rgba(0,0,0,0.05);
+    animation-delay: -1s;
+}
+
+.profit-container .caller-box:hover span::after {
+    bottom: -50px;
+    right: 50px;
+    width: 100px;
+    height: 100px;
+    opacity: 1;
+}
+
+@keyframes animate {
+    0%,100%
+    {
+        transform: translateY(10px);
+    }
+    50%
+    {
+        transform: translate(-10px);
+    }
+}
+
+.profit-container .caller-box .callers-content {
+    z-index: 1;
+    position: relative;
+    left: 0;
+    padding: 20px 40px;
+    background: rgba(255,255,255,0.05);
+    box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+    border-radius: 8px;
+    backdrop-filter: blur(10px);
+    transition: 0.5s;
+    color: white;
+}
+
+.profit-container .caller-box:hover .callers-content {
+    left: -25px;
+    padding: 20px 40px;
+}
+
+.profit-container .caller-box .callers-content h3 {
+    font-size: 1.8em;
+    color: white;
+    margin-bottom: 10px;
+}
+
+.profit-container .caller-box .callers-content ul {
+    font-size: 1.2em;
+    margin-bottom: 10px;
+    line-height: 1.4em;
+    list-style-type: none;
+    text-align: center;
+    padding-left: 0px;
+}
