--- a/css/membership.css
+++ b/css/membership.css
@@ -2,7 +2,6 @@
     position: relative;
     width: calc(100% - 100px);
     min-height: calc(100vh - 280px);
-    min-height: 300px;
     background: linear-gradient(180deg, rgba(0,215,255,1) 0%, rgba(0,61,255,0.9668242296918768) 100%, rgba(173,169,169,1) 100%);
     box-shadow: 0 35px 35px rgb(0 0 0);
     border: 1px;
@@ -11,4 +10,21 @@
     justify-content: space-between;
     align-items: center;
     padding: 50px;
+}
+
+.membership-options {
+    align-items: center;
+    min-height: 100vh;
+    padding: 50px;
+    background: linear-gradient(180deg, rgba(0,215,255,1) 0%, rgba(0,61,255,0.9668242296918768) 100%, rgba(173,169,169,1) 100%);
+    display: flex;
+    justify-content: space-evenly;
+    text-align: center;
+}
+
+.container .card {
+    position: relative;
+    min-width: 320px;
+    height: 500px;
+    box-shadow: inset 5px 5px 5px rgba(0,0,0,0.2), inset -5px -5px 15px rgba(255,255,255,0.1);
 }
