--- a/css/membership.css
+++ b/css/membership.css
@@ -22,7 +22,7 @@
     padding: 50px;
 }
 
-.section ,.membership-options {
+.membership-options {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -32,7 +32,7 @@
     text-align: center;
 }
 
-.container .card {
+.membership-container .membership-card {
     position: relative;
     min-width: 320px;
     height: 500px;
@@ -41,7 +41,7 @@
     margin: 30px;
 }
 
-.container .card .box{
+.membership-container .membership-card .membership-box{
     position: absolute;
     top: 20px;
     left: 20px;
