--- a/css/membership.css
+++ b/css/membership.css
@@ -51,5 +51,39 @@
     border-radius: 15px;
     border: 2px solid #1e1f23;
     box-shadow: 0 20px 50px rgba(0,0,0,0.5);
-    display: flex;align-items: center;
+    display: flex;
+    align-items: center;
+    transition: transform 0.4s, box-shadow 0.4s;
+}
+
+.membership-container .membership-card:hover .membership-box {
+    transform: translateY(-50px);
+    box-shadow: 0 40px 70px rgba(0,0,0,0.5);
+}
+
+.membership-container .membership-card .membership-box .membership-content {
+    padding: 20px;
+    text-align: center;
+}
+
+.membership-container .membership-card .membership-box .membership-content h3 {
+    font-size: 1.8em;
+    color: white;
+    font-weight: 300;
+}
+
+.membership-container .membership-card .membership-box .membership-content h4 {
+    font-size: 3em;
+    color: white;
+    font-weight: 700;
+}
+
+.membership-container .membership-card .membership-box .membership-content ul {
+position: relative;
+}
+
+.membership-container .membership-card .membership-box .membership-content ul li {
+    color: white;
+    list-style: none;
+    margin: 5px 0;
 }
