--- a/css/membership.css
+++ b/css/membership.css
@@ -1,3 +1,12 @@
+html {
+    font-family: "Avenir Next", "Avenir", sans-serif;
+    color: white;
+    background-image: url(/css/images/Wall-of-gains-light-mode-background.png);
+    background-size: cover;
+    background-repeat: repeat-y;
+    background-position: center;
+    background-attachment: fixed;
+}
 .header-section {
     display: flex;
     justify-content: center;
@@ -6,11 +15,8 @@
     padding: 50px;
 }
 
-
-
 .membership-container {
     position: relative;
-    width: calc(100% - 100px);
     min-height: calc(100vh - 280px);
     background: linear-gradient(180deg, rgba(0,215,255,1) 0%, rgba(0,61,255,0.9668242296918768) 100%, rgba(173,169,169,1) 100%);
     box-shadow: 0 35px 35px rgb(0 0 0);
@@ -20,16 +26,20 @@
     justify-content: space-between;
     align-items: center;
     padding: 50px;
+    width: fit-content;
 }
 
 .membership-options {
     display: flex;
-    justify-content: space-evenly;
     align-items: center;
     min-height: 100vh;
     padding: 50px;
     background: linear-gradient(180deg, rgba(0,215,255,1) 0%, rgba(0,61,255,0.9668242296918768) 100%, rgba(173,169,169,1) 100%);
     text-align: center;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    box-shadow: 0 35px 35px rgb(0 0 0);
+    border-radius: 20px;
 }
 
 .membership-container .membership-card {
@@ -73,17 +83,37 @@
 }
 
 .membership-container .membership-card .membership-box .membership-content h4 {
-    font-size: 3em;
+    font-size: 2.5em;
     color: white;
-    font-weight: 700;
+    font-weight: 500;
+    text-align: center;
+}
+
+sup {
+    font-size: 0.5em;
+    font-weight: 200;
 }
 
 .membership-container .membership-card .membership-box .membership-content ul {
-position: relative;
+    position: relative;
+    margin-left: 0;
+    padding-left: 0;
 }
 
 .membership-container .membership-card .membership-box .membership-content ul li {
     color: white;
     list-style: none;
     margin: 5px 0;
+    padding-left: 0;
+}
+
+.membership-container .membership-card .membership-box .membership-content a {
+    position: relative;
+    display: inline-block;
+    padding: 8px 20px;
+    background: white;
+    margin-top: 15px;
+    border-radius: 20px;
+    text-decoration: none;
+    font-weight: 200;
 }
