--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ html {
     background-repeat: repeat-y;
     background-position: center;
     background-attachment: fixed;
+    scroll-behavior: smooth;
 }
 
 
