--- a/css/game.css
+++ b/css/game.css
@@ -272,3 +272,32 @@ button {
     border-color: white;
     color: black;
 }
+
+/*snake*/
+.snake-section {
+    min-height: 100vh;
+    width:100vw;
+    justify-content:  center;
+    align-items: center;
+    margin: 0;
+    background-color: bkack;
+} 
+
+#gameboard {
+    background: linear-gradient(180deg, rgba(0,215,255,1) 0%, rgba(0,61,255,0.9668242296918768) 100%, rgba(173,169,169,1) 100%);
+    width: 100vmin;
+    height: 100vmin;
+    display: grid;
+    grid-template-rows: repeat(21, 1fr);
+}
+
+.snake {
+    background-color: red;
+    border: .25vmin solid black;
+}
+
+.food {
+    background-color:yellowgreen;
+    border: .25vmin solid black;
+
+}
