--- a/css/game.css
+++ b/css/game.css
@@ -283,12 +283,13 @@ button {
     background-color: bkack;
 } 
 
-#gameboard {
+#game-board {
     background: linear-gradient(180deg, rgba(0,215,255,1) 0%, rgba(0,61,255,0.9668242296918768) 100%, rgba(173,169,169,1) 100%);
     width: 100vmin;
     height: 100vmin;
     display: grid;
     grid-template-rows: repeat(21, 1fr);
+    grid-template-columns: repeat(21, 1fr);
 }
 
 .snake {
