--- a/css/game.css
+++ b/css/game.css
@@ -280,11 +280,13 @@ button {
     justify-content:  center;
     align-items: center;
     margin: 0;
-    background-color: bkack;
+    background: linear-gradient(180deg, rgba(0,215,255,1) 0%, rgba(0,61,255,0.9668242296918768) 100%, rgba(173,169,169,1) 100%);
+    height: 100vh;
+    width: 100vw;
 } 
 
 #game-board {
-    background: linear-gradient(180deg, rgba(0,215,255,1) 0%, rgba(0,61,255,0.9668242296918768) 100%, rgba(173,169,169,1) 100%);
+    background: white;
     width: 100vmin;
     height: 100vmin;
     display: grid;
