--- a/css/game.css
+++ b/css/game.css
@@ -282,6 +282,9 @@ button {
     height: 100vh;
     width: 100vw;
     display: flex;
+    border-radius: 20px;
+    width: fit-content;
+    height: fit-content;
 } 
 
 #game-board {
@@ -291,6 +294,7 @@ button {
     grid-template-rows: repeat(21, 1fr);
     grid-template-columns: repeat(21, 1fr);
     display: grid;
+    transform: translate(1045px, -1000px);
 }
 
 .snake {
@@ -303,14 +307,3 @@ button {
     border: .25vmin solid black;
 
 }
-
-min-height: 300px;
-    background: linear-gradient(180deg, rgba(0,215,255,1) 0%, rgba(0,61,255,0.9668242296918768) 100%, rgba(173,169,169,1) 100%);
-    box-shadow: 0 35px 35px rgb(0 0 0);
-    border: 1px;
-    border-radius: 20px;
-    width: fit-content;
-    height: fit-content;
-    max-width: 60%;
-    min-width: 40%;
-    display: inline-block;
