--- a/css/style.css
+++ b/css/style.css
@@ -741,3 +741,14 @@ a {
     top: -131px;
     font-size: 3.5em;
 }
+
+@media (min-width:375px) {
+    html {
+
+    }
+}
+@media (min-width: 375px) {
+    body {
+}
+    
+}
