--- a/css/style.css
+++ b/css/style.css
@@ -741,3 +741,12 @@ a {
     font-size: 3.5em;
 }
 
+
+.membership-options {
+    background: linear-gradient(180deg, rgba(0,215,255,1) 0%, rgba(0,61,255,0.9668242296918768) 100%, rgba(173,169,169,1) 100%);
+    border-radius: 20px;
+    display: flex;
+    text-align: center;
+    justify-content: space-evenly;
+    align-items: center;
+}
