--- a/css/style.css
+++ b/css/style.css
@@ -12,42 +12,36 @@ html {
 
 
 section {
-    display: flex;
-    justify-content: center;
     align-items: center;
-    min-height: 100vh;
     padding: 50px;
+    text-align: -webkit-center;
+    max-width: 90%;
+    margin-left: 0;
+    margin-bottom: 20px;
+    margin-top: 20px;
 }
 
 .container {
-    position: relative;
     width: calc(100% - 100px);
-    min-height: calc(100vh - 280px);
     min-height: 300px;
     background: linear-gradient(180deg, rgba(0,215,255,1) 0%, rgba(0,61,255,0.9668242296918768) 100%, rgba(173,169,169,1) 100%);
     box-shadow: 0 35px 35px rgb(0 0 0);
     border: 1px;
     border-radius: 20px;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
     padding: 50px;
+    flex-direction: column;
 }
 
 header {
-    position: absolute;
-    top: -85px;
-    right: 20px;
-    left: 20px;
     padding: 20px 50px;
-    justify-content: space-between;
-    align-items: center;
     background: linear-gradient(180deg, rgba(0,215,255,1) 0%, rgba(0,61,255,0.9668242296918768) 100%, rgba(173,169,169,1) 100%);
     border: 1px;
     border-radius: 20px;
     box-shadow: 0 35px 35px rgb(0 0 0 / 50%);
     backdrop-filter: blur(10px);
     z-index: 1;
+    transform: translateY(-65px);
 }
 
 audio {
@@ -63,16 +57,16 @@ audio::-webkit-media-controls-panel {
 }
 
 .audio-div {
-    position: absolute;
+    position: relative;
     top: 10px;
-    left: 10px;
+    left: -520px;
     max-height: 35px;
     min-width: 300px;
 }
 
 .play-me {
     position: relative;
-    left: 120px;
+    left: 170px;
     bottom: 40px;
     color: white;
 
@@ -107,7 +101,6 @@ header ul li a:hover.active {
 }
 
 .intro-content-box {
-    transform: translateX(-85px);
     max-width: 850px;
     box-shadow: 0 15px 30px rgb(0 0 0 / 10%);
     border-radius: 20px;
@@ -130,10 +123,7 @@ header ul li a:hover.active {
 }
 
 .logo-div{
-    width: 100%;
-    position: relative;
-    margin: -85px;
-    transform: translateX(80px);
+    width: fit-content;
 }
 
 .logo {
@@ -161,9 +151,7 @@ header ul li a:hover.active {
 }
 
 .team-container {
-    position: absolute;
-    width: calc(100% - 100px);
-    min-height: calc(100vh - 280px);
+    min-width: calc(100% - 100px);
     min-height: 300px;
     background: linear-gradient(180deg, rgba(0,215,255,1) 0%, rgba(0,61,255,0.9668242296918768) 100%, rgba(173,169,169,1) 100%);
     box-shadow: 0 35px 35px rgb(0 0 0);
@@ -312,16 +300,17 @@ header ul li a:hover.active {
 /* callers */
 
 .profit-container {
-    display: inline-block;
-    bottom: -2000px;
-    position: absolute;
+    margin: 0;
+    box-sizing: border-box;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: 40px 0;
     background: linear-gradient(180deg, rgba(0,215,255,1) 0%, rgba(0,61,255,0.9668242296918768) 100%, rgba(173,169,169,1) 100%);
     min-height: 300px;
     box-shadow: 0 35px 35px rgb(0 0 0);
     border: 1px;
     border-radius: 20px;
-    align-items: center;
-    padding: 50px;
 }
 
 .callers-cards {
@@ -355,16 +344,6 @@ header ul li a:hover.active {
     transform: translateX(25px);
 }
 
-.profit-container{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    padding: 40px 0;
-}
 
 .profit-container .caller-box {
     position: relative;
@@ -459,7 +438,7 @@ width: calc(100%-90px);
 }
 
 .profit-container .caller-box:hover span::before {
-    top: -50px;
+    top: -75px;
     left: 50px;
     width: 100px;
     height: 100px;
@@ -484,7 +463,7 @@ width: calc(100%-90px);
 }
 
 .profit-container .caller-box:hover span::after {
-    bottom: -50px;
+    bottom: -95px;
     right: 50px;
     width: 100px;
     height: 100px;
@@ -640,10 +619,9 @@ img {
 }
 
 .split-iframe {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+    display: inline-block;
     height: 225px;
+    max-width: 500px;
 }
 
 .solana-tool {
@@ -667,23 +645,22 @@ img {
 }
 
 .future-iframe-wrap {
-    display: flex;
+    display: inline-flex;
     align-items: center;
 }
 
 .future-iframe {
-    width: 580px;
-    height: 250px; 
+    width: 390px;
+    height: 250px;
 }
 
 .different-marketplace-text {
-    margin-left: 295px;
-    width: 275px;
-    position: relative;
+    max-width: 205px;
     border: 5px;
     border-color: white;
     border-style: dashed;
     border-radius: 20px;
+    margin-left: 20px;
 }
 
 .future-list {
