--- a/css/membership.css
+++ b/css/membership.css
@@ -8,6 +8,8 @@ html {
     background-position: center;
     background-attachment: fixed;
     scroll-behavior: smooth;
+    display: inline-flex;
+    justify-content: center;
 }
 
 body {
@@ -18,60 +20,78 @@ body {
 }
 
 .header-section {
-    text-align: -webkit-center;
-    max-width: 90%;
-    margin-left: 0;
-    margin-bottom: 20px;
-    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 50px;
+    min-height: 40vh;
 }
 
-.membership-container {
-    width: 100%;
-    min-height: 300px;
+.container {
+    position: relative;
+    max-width: 90%;
     background: linear-gradient(180deg, rgba(0,215,255,1) 0%, rgba(0,61,255,0.9668242296918768) 100%, rgba(173,169,169,1) 100%);
     box-shadow: 0 35px 35px rgb(0 0 0);
     border: 1px;
     border-radius: 20px;
+    padding: 50px;
+    padding-top: 140px;
     display: inline-flex;
-    padding: 20px;
-    flex-direction: column;
+}
+
+header ul {
+    display: inline-flex;
+    list-style: none;
+    padding-left: 0px;
     align-items: center;
+    justify-content: space-evenly;
+    flex-direction: row;
+    flex-wrap: wrap;
+    max-width: 50%;
+    margin-left: 20px;
+}
+
+header ul li a {
+    text-decoration: none;
+    font-weight: 500;
+    color: whitesmoke;
+    padding: 8px 15px;
+    border-radius: 25px;
+}
+
+header ul li a:hover, header ul li a:hover.active {
+    background-color: white;
+    box-shadow: 0 5px 10px rgb(0 0 0 / 10%);
+    color: #56AEFF;
+}
+
+div p {
+    padding-left: 10px;
 }
 
 header {
+    position: absolute;
     padding: 20px 50px;
     background: linear-gradient(180deg, rgba(0,215,255,1) 0%, rgba(0,61,255,0.9668242296918768) 100%, rgba(173,169,169,1) 100%);
     border: 1px;
     border-radius: 20px;
     box-shadow: 0 35px 35px rgb(0 0 0 / 50%);
     backdrop-filter: blur(10px);
-    z-index: 1;
-    transform: translateY(-65px);
-    max-width: 90%;
-    padding-left: 20px;
-    padding-right: 20px;
-    width: 90%;
-}
-.header-section {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    padding: 50px;
+    max-height: 30%;
+    max-width: 80%;
+    left: 20px;
+    right: 20px;
+    top: -60px;
+    display: inline-flex;
 }
 
-.membership-container {
-    position: relative;
-    min-height: calc(100vh - 280px);
-    background: linear-gradient(180deg, rgba(0,215,255,1) 0%, rgba(0,61,255,0.9668242296918768) 100%, rgba(173,169,169,1) 100%);
-    box-shadow: 0 35px 35px rgb(0 0 0);
-    border: 1px;
-    border-radius: 20px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 50px;
+.intro-content-box {
     width: fit-content;
+}
+
+.logo-div {
+    width: fit-content;
+    margin: -85px;
 }
 
 .membership-options {
@@ -79,21 +99,31 @@ header {
     border-radius: 20px;
     display: inline-flex;
     text-align: center;
-    justify-content: space-evenly;
-    align-items: center;
     flex-direction: row;
     flex-wrap: wrap;
     padding-top: 20px;
     padding-bottom: 20px;
     padding-right: 20px;
     padding-left: 20px;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.membership-container {
+    position: relative;
+    background: linear-gradient(180deg, rgba(0,215,255,1) 0%, rgba(0,61,255,0.9668242296918768) 100%, rgba(173,169,169,1) 100%);
+    box-shadow: 0 35px 35px rgb(0 0 0);
+    border: 1px;
+    border-radius: 20px;
+    display: inline-flex;
+    align-items: center;
+    padding: 50px;
+    min-width: 205px;
 }
 
 .membership-container .membership-card {
-    position: relative;
-    min-width: 320px;
-    height: 500px;
-    box-shadow: inset 5px 5px 5px rgba(0,0,0,0.2), inset -5px -5px 15px rgba(255,255,255,0.1), 5px 5px 15px rgba(0,0,0,0.3), -5px -5px 5px rgba(0,0,0,0.1);
+    height: 720px;
+    box-shadow: inset 5px 5px 5px rgb(0 0 0 / 20%), inset -5px -5px 15px rgb(255 255 255 / 10%), 5px 5px 15px rgb(0 0 0 / 30%), -5px -5px 5px rgb(0 0 0 / 10%);
     border-radius: 15px;
     margin: 30px;
 }
@@ -107,15 +137,10 @@ header {
     background: #2a2b2f;
     border-radius: 15px;
     border: 2px solid #1e1f23;
-    box-shadow: 0 20px 50px rgba(0,0,0,0.5);
+    box-shadow: 0 20px 50px rgb(0 0 0 / 50%);
     display: flex;
     align-items: center;
     transition: transform 0.4s, box-shadow 0.4s;
-}
-
-.membership-container .membership-card:hover .membership-box {
-    transform: translateY(-50px);
-    box-shadow: 0 40px 70px rgba(0,0,0,0.5);
 }
 
 .membership-container .membership-card .membership-box .membership-content {
@@ -165,8 +190,23 @@ sup {
     font-weight: 200;
 }
 
-@media only screen and (min-width: 425px) {
+.membership-container .membership-card:hover .membership-box {
+    transform: translateY(-50px);
+    box-shadow: 0 40px 70px rgba(0,0,0,0.5);
+}
+
+
+@media only screen and (max-width: 425px) {
     .logo {
+        display: none;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    .audio-div {
+        display: none;
+    }
+    .play-me {
         display: none;
     }
 }
