--- a/css/game.css
+++ b/css/game.css
@@ -14,28 +14,26 @@ section {
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
     padding: 50px;
 }
 
 .container {
     position: relative;
-    width: calc(100% - 100px);
-    min-height: calc(100vh - 280px);
+    width: 90%;
     min-height: 300px;
     background: linear-gradient(180deg, rgba(0,215,255,1) 0%, rgba(0,61,255,0.9668242296918768) 100%, rgba(173,169,169,1) 100%);
     box-shadow: 0 35px 35px rgb(0 0 0);
     border: 1px;
     border-radius: 20px;
     display: flex;
-    justify-content: space-between;
     align-items: center;
     padding: 50px;
+    justify-content: center;
 }
 
 header {
     position: absolute;
-    top: -85px;
+    top: -30px;
     right: 20px;
     left: 20px;
     padding: 20px 50px;
@@ -47,8 +45,19 @@ header {
     box-shadow: 0 35px 35px rgb(0 0 0 / 50%);
     backdrop-filter: blur(10px);
     z-index: 1;
+    max-width: 90%;
 }
 
+@media only screen and (max-width: 375px) {
+    header {
+        display: inline-flex;
+    }
+    header ul {
+        width: fit-content;
+        display: flex;
+        flex-direction: column;
+    }
+}
 audio {
     display: flex;
     height: 30px;
@@ -107,7 +116,7 @@ header ul li a:hover.active {
 }
 
 .intro-content-box {
-    transform: translateX(-85px);
+    transform: translatey(50px);
     max-width: 850px;
     box-shadow: 0 15px 30px rgb(0 0 0 / 10%);
     border-radius: 20px;
@@ -139,6 +148,18 @@ header ul li a:hover.active {
 .logo {
     max-width: 335px;
     border-radius: 20px;
+}
+
+.game-selection {
+    background: linear-gradient(180deg, rgba(0,215,255,1) 0%, rgba(0,61,255,0.9668242296918768) 100%, rgba(173,169,169,1) 100%);
+    box-shadow: 0 35px 35px rgb(0 0 0);
+    border: 1px;
+    border-radius: 20px;
+    text-align: center;
+    max-width: 30%;
+    display: inline-block;
+    padding-right: 20px;
+    padding-left: 20px;
 }
 
 .headings-box {
