--- a/css/style.css
+++ b/css/style.css
@@ -759,5 +759,11 @@ a {
     transform: rotateZ(180deg);
   }
 
-
-
+  @media only screen and (max-width:425px) {
+    .team_sec {
+        display:none;
+    }
+    .profit_sec {
+        display:none;
+    }
+  }
